--- a/newsanno.conf
+++ b/newsanno.conf
@@ -3,6 +3,7 @@
 
 [settings]
 	database = C:\Users\mhouse.MGC\Work\scripts\projects\news\res\articles.db
+	log = C:\Users\mhouse.MGC\Work\scripts\projects\news\logs\newsanno.log
 
 [sources]
 	cnn = http://rss.cnn.com/rss/edition.rss,
@@ -16,3 +17,30 @@
 		  http://rss.cnn.com/rss/cnn_travel.rss,
 		  http://rss.cnn.com/rss/cnn_living.rss,
 		  http://rss.cnn.com/rss/cnn_latest.rss
+
+	msnbc = http://www.msnbc.com/feeds/latest
+
+	cnbc = http://www.cnbc.com/id/100003114/device/rss/rss.html,
+		   http://www.cnbc.com/id/100727362/device/rss/rss.html,
+		   http://www.cnbc.com/id/15837362/device/rss/rss.html,
+		   http://www.cnbc.com/id/19832390/device/rss/rss.html,
+		   http://www.cnbc.com/id/19794221/device/rss/rss.html,
+		   http://www.cnbc.com/id/10001147/device/rss/rss.html,
+		   http://www.cnbc.com/id/15839135/device/rss/rss.html,
+		   http://www.cnbc.com/id/100370673/device/rss/rss.html,
+		   http://www.cnbc.com/id/20910258/device/rss/rss.html,
+		   http://www.cnbc.com/id/10000664/device/rss/rss.html,
+		   http://www.cnbc.com/id/19854910/device/rss/rss.html,
+		   http://www.cnbc.com/id/10000113/device/rss/rss.html,
+		   http://www.cnbc.com/id/10000108/device/rss/rss.html,
+		   http://www.cnbc.com/id/10000115/device/rss/rss.html,
+		   http://www.cnbc.com/id/10001054/device/rss/rss.html,
+		   http://www.cnbc.com/id/10000101/device/rss/rss.html,
+		   http://www.cnbc.com/id/19836768/device/rss/rss.html,
+		   http://www.cnbc.com/id/10000110/device/rss/rss.html,
+		   http://www.cnbc.com/id/10000116/device/rss/rss.html,
+		   http://www.cnbc.com/id/10000739/device/rss/rss.html,
+		   http://www.cnbc.com/id/44877279/device/rss/rss.html,
+		   http://www.cnbc.com/id/15839069/device/rss/rss.html,
+		   http://www.cnbc.com/id/100646281/device/rss/rss.html,
+		   http://www.cnbc.com/id/21324812/device/rss/rss.html
