created newsanno class and integrated logging.

--- a/newsanno.conf
+++ b/newsanno.conf
@@ -1,8 +1,8 @@
 [DEFAULT]
- 	database = C:\Users\mhouse.MGC\Work\scripts\projects\news\res\articles.db
+ 	database = sqlite:///C:\\Users\\mhouse.MGC\\Work\\scripts\\projects\\news\\res\\articles.db
 
 [settings]
-	database = C:\Users\mhouse.MGC\Work\scripts\projects\news\res\articles.db
+	database = sqlite:///C:\\Users\\mhouse.MGC\\Work\\scripts\\projects\\news\\res\\articles.db
 	log = C:\Users\mhouse.MGC\Work\scripts\projects\news\logs\newsanno.log
 
 [sources]
