added filters for NYT and CNBC

--- a/newsanno.conf
+++ b/newsanno.conf
@@ -18,7 +18,7 @@
 		  http://rss.cnn.com/rss/cnn_living.rss,
 		  http://rss.cnn.com/rss/cnn_latest.rss
 
-	msnbc = http://www.msnbc.com/feeds/latest
+	#msnbc = http://www.msnbc.com/feeds/latest
 
 	cnbc = http://www.cnbc.com/id/100003114/device/rss/rss.html,
 		   http://www.cnbc.com/id/100727362/device/rss/rss.html,
@@ -44,3 +44,29 @@
 		   http://www.cnbc.com/id/15839069/device/rss/rss.html,
 		   http://www.cnbc.com/id/100646281/device/rss/rss.html,
 		   http://www.cnbc.com/id/21324812/device/rss/rss.html
+
+	nyt = http://rss.nytimes.com/services/xml/rss/nyt/World.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/Africa.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/Americas.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/AsiaPacific.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/Europe.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/MiddleEast.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/US.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/Education.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/Politics.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/Business.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/EnergyEnvironment.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/SmallBusiness.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/Economy.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/Technology.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/PersonalTech.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/Sports.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/Science.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/Environment.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/Space.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/Health.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/Travel.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/FashionandStyle.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/Arts.xml,
+		  http://rss.nytimes.com/services/xml/rss/nyt/Movies.xml,
+		  http://topics.nytimes.com/top/opinion/editorialsandoped/oped/contributors/index.html?rss=1
