--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
-requests==2.12.4
-Unidecode==0.4.20
+appdirs==1.4.3
 beautifulsoup4==4.5.3
-sqlalchemy-1.1.6
+click==6.7
 configparser==3.5.0
+Flask==0.12
+itsdangerous==0.24
+Jinja2==2.9.5
+MarkupSafe==1.0
+packaging==16.8
+pyparsing==2.2.0
+requests==2.13.0
+six==1.10.0
+SQLAlchemy==1.1.6
+Unidecode==0.4.20
+Werkzeug==0.12.1
