working on layout

--- a/newsanno.conf
+++ b/newsanno.conf
@@ -1,9 +1,13 @@
 [DEFAULT]
  	database = sqlite:///C:\\Users\\mhouse.MGC\\Work\\scripts\\projects\\news\\res\\articles.db
+    log = C:\Users\mhouse.MGC\Work\scripts\projects\news\logs\newsanno.log
 
 [settings]
-	database = sqlite:///C:\\Users\\mhouse.MGC\\Work\\scripts\\projects\\news\\res\\articles.db
-	log = C:\Users\mhouse.MGC\Work\scripts\projects\news\logs\newsanno.log
+	#database = sqlite:///C:\\Users\\mhouse.MGC\\Work\\scripts\\projects\\news\\res\\articles.db
+    #log = C:\Users\mhouse.MGC\Work\scripts\projects\news\logs\newsanno.log
+
+	database = sqlite:////home/mhouse/Projects/python/newsannotation/articles.db
+	log = /home/mhouse/Projects/python/newsannotation/logs/newsanno.log
 
 [sources]
 	cnn = http://rss.cnn.com/rss/edition.rss,
