--- a/config/newsbin.conf
+++ b/config/newsbin.conf
@@ -1,10 +1,10 @@
 [DEFAULT]
- 	database = sqlite:///C:\\Users\\mhouse.MGC\\Work\\scripts\\projects\\news\\res\\articles.db
-    log = C:\Users\mhouse.MGC\Work\scripts\projects\news\logs\newsanno.log
+	database = sqlite:///C:\\Users\\mhouse.MGC\\Work\\scripts\\projects\\news\\res\\articles.db
+	log = C:\Users\mhouse.MGC\Work\scripts\projects\news\logs\newsanno.log
 
 [settings]
 	#database = sqlite:///C:\\Users\\mhouse.MGC\\Work\\scripts\\projects\\news\\res\\articles.db
-    #log = C:\Users\mhouse.MGC\Work\scripts\projects\news\logs\newsanno.log
+	#log = C:\Users\mhouse.MGC\Work\scripts\projects\news\logs\newsanno.log
 
 	database = sqlite:////home/mhouse/Projects/python/newsannotation/articles.db
 	log = /home/mhouse/Projects/python/newsannotation/logs/newsanno.log
@@ -49,7 +49,7 @@
 		   http://www.cnbc.com/id/100646281/device/rss/rss.html,
 		   http://www.cnbc.com/id/21324812/device/rss/rss.html
 
-	nyt = http://rss.nytimes.com/services/xml/rss/nyt/World.xml,
+	nytimes = http://rss.nytimes.com/services/xml/rss/nyt/World.xml,
 		  http://rss.nytimes.com/services/xml/rss/nyt/Africa.xml,
 		  http://rss.nytimes.com/services/xml/rss/nyt/Americas.xml,
 		  http://rss.nytimes.com/services/xml/rss/nyt/AsiaPacific.xml,
@@ -74,3 +74,67 @@
 		  http://rss.nytimes.com/services/xml/rss/nyt/Arts.xml,
 		  http://rss.nytimes.com/services/xml/rss/nyt/Movies.xml,
 		  http://topics.nytimes.com/top/opinion/editorialsandoped/oped/contributors/index.html?rss=1
+
+	washingtonpost = http://feeds.washingtonpost.com/rss/rss_election-2012,
+					 http://feeds.washingtonpost.com/rss/rss_powerpost,
+					 http://feeds.washingtonpost.com/rss/rss_fact-checker,
+					 http://feeds.washingtonpost.com/rss/rss_the-fix,
+					 http://feeds.washingtonpost.com/rss/rss_monkey-cage,
+					 http://feeds.washingtonpost.com/rss/rss_act-four,
+					 http://feeds.washingtonpost.com/rss/rss_achenblog,
+					 http://feeds.washingtonpost.com/rss/rss_checkpoint,
+					 http://feeds.washingtonpost.com/rss/rss_innovations,
+					 http://feeds.washingtonpost.com/rss/rss_morning-mix,
+					 http://feeds.washingtonpost.com/rss/rss_post-nation,
+					 http://feeds.washingtonpost.com/rss/rss_speaking-of-science,
+					 http://feeds.washingtonpost.com/rss/rss_to-your-health,
+					 http://feeds.washingtonpost.com/rss/rss_blogpost,
+					 http://feeds.washingtonpost.com/rss/rss_digger,
+					 http://feeds.washingtonpost.com/rss/national/energy-environment,
+					 http://feeds.washingtonpost.com/rss/rss_on-leadership,
+					 http://feeds.washingtonpost.com/rss/blogs/rss_the-switch,
+					 http://feeds.washingtonpost.com/rss/rss_wonkblog
+
+	reuters = http://feeds.reuters.com/news/artsculture,
+			  http://feeds.reuters.com/reuters/businessNews,
+			  http://feeds.reuters.com/reuters/companyNews,
+			  http://feeds.reuters.com/reuters/entertainment,
+			  http://feeds.reuters.com/reuters/environment,
+			  http://feeds.reuters.com/reuters/healthNews,
+			  http://feeds.reuters.com/reuters/lifestyle,
+			  http://feeds.reuters.com/news/wealth,
+			  http://feeds.reuters.com/reuters/MostRead,
+			  http://feeds.reuters.com/reuters/peopleNews,
+			  http://feeds.reuters.com/Reuters/PoliticsNews,
+			  http://feeds.reuters.com/reuters/scienceNews,
+			  http://feeds.reuters.com/reuters/sportsNews,
+			  http://feeds.reuters.com/reuters/technologyNews,
+			  http://feeds.reuters.com/reuters/topNews,
+			  http://feeds.reuters.com/Reuters/domesticNews,
+			  http://feeds.reuters.com/Reuters/worldNews,
+
+	foxnews = http://feeds.foxnews.com/foxnews/latest,
+			  http://feeds.foxnews.com/foxnews/most-popular,
+			  http://feeds.foxnews.com/foxnews/entertainment,
+			  http://feeds.foxnews.com/foxnews/health,
+			  http://feeds.foxnews.com/foxnews/section/lifestyle,
+			  http://feeds.foxnews.com/foxnews/opinion,
+			  http://feeds.foxnews.com/foxnews/politics,
+			  http://feeds.foxnews.com/foxnews/science,
+			  http://feeds.foxnews.com/foxnews/sports,
+			  http://feeds.foxnews.com/foxnews/tech,
+			  http://feeds.foxnews.com/foxnews/national,
+			  http://feeds.foxnews.com/foxnews/video,
+			  http://feeds.foxnews.com/foxnews/world
+
+	#huffingtonpost = http://www.huffingtonpost.com/feeds/index.xml,
+	#				 http://www.huffingtonpost.com/feeds/verticals/arts/index.xml,
+	#				 http://www.huffingtonpost.com/feeds/verticals/politics/index.xml,
+	#				 http://www.huffingtonpost.com/feeds/verticals/business/index.xml,
+	#				 http://www.huffingtonpost.com/feeds/verticals/crime/index.xml,
+	#				 http://www.huffingtonpost.com/feeds/verticals/education/index.xml,
+	#				 http://www.huffingtonpost.com/feeds/verticals/science/index.xml,
+	#				 http://www.huffingtonpost.com/feeds/verticals/technology/index.xml,
+	#				 http://www.huffingtonpost.com/feeds/verticals/sports/index.xml
+
+	
