--- a/config/newsbin.conf
+++ b/config/newsbin.conf
@@ -1,13 +1,10 @@
 [DEFAULT]
-	database = sqlite:///C:\\Users\\mhouse.MGC\\Work\\scripts\\projects\\news\\res\\articles.db
-	log = C:\Users\mhouse.MGC\Work\scripts\projects\news\logs\newsanno.log
+	database = sqlite:///C:\\Users\\mhouse.MGC\\Work\\scripts\\projects\\newsbin\\data\\articles.db
+	logdir = C:\\Users\\mhouse.MGC\\Work\\scripts\\projects\\newsbin\\data\\logs
 
 [settings]
-	#database = sqlite:///C:\\Users\\mhouse.MGC\\Work\\scripts\\projects\\news\\res\\articles.db
-	#log = C:\Users\mhouse.MGC\Work\scripts\projects\news\logs\newsanno.log
-
-	database = sqlite:////home/mhouse/Projects/python/newsbin/articles.db
-	log = /home/mhouse/Projects/python/newbin/logs/newsanno.log
+	#database = sqlite:////home/mhouse/Projects/python/newsbin/articles.db
+	#log = /home/mhouse/Projects/python/newbin/logs/newsanno.log
 
 [sources]
 	cnn = http://rss.cnn.com/rss/edition.rss,
