--- a/config/newsbin.conf
+++ b/config/newsbin.conf
@@ -1,10 +1,10 @@
 [DEFAULT]
-	database = sqlite:///C:\\Users\\mhouse.MGC\\Work\\scripts\\projects\\newsbin\\data\\articles.db
-	logdir = C:\\Users\\mhouse.MGC\\Work\\scripts\\projects\\newsbin\\data\\logs
+	#database = sqlite:///C:\\Users\\mhouse.MGC\\Work\\scripts\\projects\\newsbin\\data\\articles.db
+	#logdir = C:\\Users\\mhouse.MGC\\Work\\scripts\\projects\\newsbin\\data\\logs
 
 [settings]
-	#database = sqlite:////home/mhouse/Projects/python/newsbin/articles.db
-	#log = /home/mhouse/Projects/python/newbin/logs/newsanno.log
+	database = sqlite:////home/mhouse/Projects/python/newsbin/data/articles.db
+	logdir = /home/mhouse/Projects/python/newsbin/data/logs
 
 [sources]
 	cnn = http://rss.cnn.com/rss/edition.rss,
