pre-deploy automated commit

--- a/site/package.json
+++ b/site/package.json
@@ -8,16 +8,17 @@
     "url": "https://github.com/mjhouse/newsbin.git"
   },
   "scripts": {
-    "autoprefixer": "postcss -u autoprefixer --replace static/css/*.css",
+    "autoprefixer": "postcss -u autoprefixer --no-map --replace static/css/*.css",
     "scss": "node-sass --output-style compressed --output static/css/ static/css/src/",
-    "uglify": "uglifyjs static/js/*.js -m -o static/js/newsbin.js && uglifyjs src/js/*.js -m -c -o static/js/newsbin.min.js",
+    "uglify": "for i in static/js/src/*.js; do uglifyjs $i -m -c -o static/js/${i##*/}; done",
     "build:css": "npm run scss && npm run autoprefixer",
-    "build:js": "npm run uglify"
+    "build:js": "npm run uglify",
+	"build":"npm run build:css && npm run build:js"
   },
   "devDependencies": {
-    "autoprefixer": "7.1.1",
-    "node-sass": "4.5.3",
-    "postcss-cli": "^4.0.0",
-    "uglifyjs": "2.4.11"
+    "autoprefixer": ">=7.1.1",
+    "node-sass": ">=4.5.3",
+    "postcss-cli": ">=4.0.0",
+    "uglify-js": ">=3.0.14"
   }
 }
